# lsp_experiment

./: .gitignore  server_test.py  test.toy  test_full_protocol.py
src/: CMakeLists.txt  documents.c  documents.h  handlers.c  rpc.c  server.c  server.h  transport.c
toy-lsp-vscode/: extension.js  package-lock.json  package.json
